[project]
name = "ragyepai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.35",
    "langchain-pinecone>=0.2.0",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.0.1",
    "pinecone-client>=5.0.1",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]
